홈에서 truncatewords 적용

--- a/_posts/2021-03-12-panabara.md
+++ b/_posts/2021-03-12-panabara.md
@@ -6,7 +6,7 @@ tag: [Django, Python]
 ---
 
 
-#### 분산된 투자 종목들을 한번에 관리하고 투자 유형별, 종목별로 자산 현황을 쉽게 파악하고자 아래와 같이 간단히 구성하였다.
+분산된 투자 종목들을 한번에 관리하고 투자 유형별, 종목별로 자산 현황을 쉽게 파악하고자 아래와 같이 간단히 구성하였다.
 
 
 - 적용 항목
