--- a/_posts/2021-09-05-msabasic.md
+++ b/_posts/2021-09-05-msabasic.md
@@ -6,7 +6,7 @@ tag: [MSA, MicroService, Architecture]
 ---
 
 
-> 단일 서버에서 서비스 하던 것에서 벗어나 가능한 작은 서비스들로 나눈어 클라우드 환경에서 구성하기 위함이다. 
+단일 서버에서 서비스 하던 것에서 벗어나 가능한 작은 서비스들로 나눈어 클라우드 환경에서 구성하기 위함이다. 
  MicroService  -> Contailer -> 많아지니까 클러스터 구성 -> 이런 환경을 클라우드 환경에서 구현함
  
 ![https://www.s-core.co.kr/ 참조](/assets/images/msa-arch.png) 
