--- a/_posts/2021-09-16-5why.md
+++ b/_posts/2021-09-16-5why.md
@@ -21,19 +21,19 @@ tag: [5Whys]
  미국 제퍼슨 독립기념관의 대리석 기둥이 해마다 지속적으로 부식되자 많은 보수 비용이 발생하게 되고 기념관의 이미지가 훼손되었습니다. 5Whys 를 통해 이러한 문제를 해결한 사례를 들어보겠습니다. 
 
    - Why 1. 왜 대리석들이 빨리 부식되는가?
-      - 비누 청소를 자주 하기 떄문이다.
+      - *비누 청소를 자주 하기 떄문이다.*
 
    - Why 2. 왜 비누 청소를 자주 하는가?
-      - 비둘기 배설물이 많이 묻기 때문이다.
+      - *비둘기 배설물이 많이 묻기 때문이다.*
 
    - Why 3. 왜 비둘기 배설물이 많은가?
-      - 비둘기의 먹잇감인 거미줄이 많기 때문이다.
+      - *비둘기의 먹잇감인 거미줄이 많기 때문이다.*
 
    - Why 4. 왜 거미줄이 많은가?
-      - 거미의 먹잇감인 불나방이 많이 있었기 때문이다.
+      - *거미의 먹잇감인 불나방이 많이 있었기 때문이다.*
 
    - Why 5. 왜 불나방이 많은가?
-      - 실내 전등을 주변보다 일찍 켜기 때문이다.
+      - *실내 전등을 주변보다 일찍 켜기 때문이다.*
    
 
    > 이를 통해 도출된 근본 원인을 해결하기 위해서 제퍼슨 독립 기념관은 주변보다 2시간 늦게 전등을 밝히는 것으로 문제를 해결했다고 합니다.
