add codeblock lang

--- a/_posts/2021-09-05-msabasic.md
+++ b/_posts/2021-09-05-msabasic.md
@@ -57,7 +57,7 @@ swagger : 개발된 API 를 테스트할 수 있는 화면
 재고 서비스가 죽더라도 다른 서비스들은 살아 있어야 한다. 
 
 
-```
+```text
 서비스:         재고서비스         생산서비스          주문서비스
                           |                           |                          |
 화면 :             swagger(1)    swagger(2)      swagger(3)
